Fixed all issues which caused visibility issues for GitHub pages

--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@ fieldset input[type="submit"]:hover {
     right: 0;
     bottom: 0;
     z-index: -1;
-    background-image: url(/Hotelscout/about-cover.jpg);
+    background-image: url(/Hotelscout/img/about-cover.jpg);
     background-size: cover;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
